V1 Inventory Management System in flask Restfull
